# test

task3/: CMakeLists.txt
task3/data/: Ingrediens.txt
task3/inc/: CookingRecipe.h  generator.h  myjson.h
task3/src/: CookingRecipe.cpp  client.cpp  generator.cpp  myjson.cpp  server.cpp
task3_build/: CMakeCache.txt  Makefile  RecipeNames.txt  client  cmake_install.cmake  data.json  server
task3_build/ext/nlohmann/: Makefile  cmake_install.cmake
